tema-9/leccion-5/cert-manager/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.allow-http: "true"
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
  - hosts:
    - curso-k8s.ddns.net
    secretName: hello-app-tls
  defaultBackend:
    service:
      name: hello-service
      port:
        number: 80
  rules:
  - host: "curso-k8s.ddns.net"
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: hello-service
              port:
                number: 80
